# UnigramPlus

./: .editorconfig  .gitignore  buildVars.py  changelog.py  pyproject.toml  readme.md
.claude/: settings.local.json
.github/: CONTRIBUTING.md
.github/workflows/: build.yaml
addon/GlobalPlugins/UnigramPlus/: __init__.py
addon/appModules/: cnf.py  data.py  readme_shortcuts.py  rich_message.py  rich_message_dialog.py  telegram.py  unigram.py  voice_recording.py
addon/doc/NE/: readme.md
addon/doc/ar/: readme.md
addon/doc/en/: readme.md
addon/doc/es/: readme.md
addon/doc/fa/: readme.md
addon/doc/fr/: readme.md
addon/doc/hr/: readme.md
addon/doc/pt_BR/: readme.md
addon/doc/pt_PT/: readme.md
addon/doc/ro/: readme.md
addon/doc/ru/: readme.md
addon/doc/sr/: readme.md
addon/doc/tr/: readme.md
addon/doc/uk/: readme.md
addon/doc/zh/: readme.md
addon/doc/zh_CN/: readme.md
addon/doc/zh_TW/: readme.md
addon/locale/ar/LC_MESSAGES/: nvda.po
addon/locale/cs/LC_MESSAGES/: nvda.po
addon/locale/es/LC_MESSAGES/: nvda.po
addon/locale/fa/LC_MESSAGES/: nvda.po
addon/locale/fr/LC_MESSAGES/: nvda.po
addon/locale/hr/LC_MESSAGES/: nvda.po
addon/locale/it/LC_MESSAGES/: nvda.po
doc/: NE.txt  ar.txt  en.txt  es.txt  fa.txt  fr.txt  hr.txt  pt_BR.txt  pt_PT.txt  ro.txt  ru.txt  sr.txt  tr.txt  uk.txt  zh_CN.txt  zh_TW.txt
pre/: README.md
site_scons/site_tools/NVDATool/: __init__.py
tests/: test_localization.py  test_readme_shortcuts.py  test_rich_message.py  test_source_integrity.py  test_voice_recording.py
(+13 files in other folders)
