[build-system]
requires = ["setuptools~=80.9", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unigramplus"
version = "5.5.0"
description = "NVDA add-on for Unigram"
maintainers = [
	{name = "Kostya Gladkiy", email = "gladkiy.kostya@gmail.com"},
]
requires-python = ">=3.13,<3.14"
classifiers = [
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: End Users/Desktop",
	"License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python :: 3",
	"Topic :: Accessibility",
]
readme = "readme.md"
license = {file = "COPYING.txt"}
dependencies = [
	"scons==4.10.1",
	"Markdown==3.10",
]

[project.urls]
Homepage = "https://github.com/Kostya-Gladkiy/UnigramPlus"
Repository = "https://github.com/Kostya-Gladkiy/UnigramPlus"

[tool.uv]
package = false

[tool.ruff]
line-length = 110
builtins = [
	"_",
	"ngettext",
	"pgettext",
	"npgettext",
]
include = [
	"*.py",
	"sconstruct",
]
exclude = [
	".git",
	"__pycache__",
	".venv",
	"buildVars.py",
]

[tool.ruff.format]
indent-style = "tab"
line-ending = "lf"

[tool.ruff.lint]
ignore = [
	"W191",
]
logger-objects = ["logHandler.log"]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"sconstruct" = ["F821"]
